[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mediassist_openenv"
version = "0.1.0"
description = "AI healthcare decision and monitoring environment for hackathon"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [ { name = "MediAssist Team" } ]
dependencies = []
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Health :: Medical Science Apps",
    "License :: OSI Approved :: MIT License",
]

[project.scripts]
mediassist-openenv = "mediassist_openenv.app:run"
